# django-views-tutorial

./: .gitignore  Makefile  Pipfile  README.md  deploy.sh  django.ini  manage.py  pyproject.toml  requirements.txt  setup.py
.github/: dependabot.yml
.github/workflows/: django.yml  pythonapp.yml
class_views/: apps.py  forms.py  models.py  urls.py  views.py
class_views/migrations/: 0001_initial.py
class_views/static/css/: contact.css  template.css
class_views/templates/class_views/: contact_class_template.html  form_class_template.html  generic_class_template.html  template_class_view.html
class_views/templates/classviews/: form_class_template.html
classviews/: apps.py  forms.py  models.py  urls.py  views.py
django_views_tutorial/: .env.example  settings.py  urls.py  wsgi.py
django_views_tutorial/static/admin/css/: base.css  widgets.css
django_views_tutorial/static/admin/js/: calendar.js
django_views_tutorial/static/css/: header.css  styles.css
django_views_tutorial/static/js/: main.js
django_views_tutorial/templates/: layout.html
django_views_tutorial/templates/partials/: analytics.html  header.html  messages.html
djangotutorial/: settings.py  urls.py  wsgi.py
djangotutorial/static/css/: styles.css
djangotutorial/templates/: layout.html
function_views/: apps.py  forms.py  models.py  urls.py  views.py
function_views/migrations/: 0001_initial.py  0002_auto_20200420_2052.py  0003_auto_20200420_2102.py  0004_auto_20200421_1657.py  0005_remove_user_facebook_profile.py  0006_auto_20200423_1638.py
function_views/static/function_views/css/: form.css  get.css  profile.css  users.css
function_views/templates/function_views/: form.html  get.html  profile.html  users.html
homepage/: apps.py  urls.py  views.py
homepage/static/homepage/css/: header.css  home.css  styles.css
homepage/templates/homepage/: index.html
homepage/templates/homepage/partials/: class_module.html  function_module.html  interactive_module.html  models_module.html
interactive/: urls.py  views.py
model_views/: apps.py  models.py  urls.py  views.py
model_views/migrations/: 0001_initial.py
model_views/templates/model_views/: detail_class_template.html  list_class_template.html
modelviews/: apps.py  urls.py
myapp/: apps.py  views.py
myapp/static/tutorialapp/css/: styles.css
myapp/templates/myapp/: index.html
simple_views/: apps.py  forms.py  models.py  urls.py  views.py
simple_views/migrations/: 0001_initial.py  0002_auto_20200404_0837.py  0002_auto_20200420_2052.py  0003_auto_20200404_1905.py  0003_auto_20200420_2102.py  0004_auto_20200421_1657.py
simple_views/static/simpleviews/css/: form.css  get.css  profile.css  users.css
simple_views/templates/simpleviews/: form.html  get.html  profile.html  users.html
simpleviews/: apps.py  forms.py  models.py  urls.py  views.py
simpleviews/migrations/: 0001_initial.py  0002_auto_20200404_0301.py  0002_auto_20200404_0837.py
simpleviews/static/simpleviews/: functionviews.css
simpleviews/static/simpleviews/css/: form.css  header.css  users.css
simpleviews/templates/simpleviews/: base.html  form.html  get.html  users.html
static/admin/css/: autocomplete.css  changelists.css
static/css/: contact.css
static/function_views/css/: form.css  get.css  profile.css  users.css
static/homepage/css/: header.css  home.css  styles.css
(+1 files in other folders)
