[tool.poetry]
name = "django_views_tutorial"
version = "0.1.0"
description = "Function and class-based Django view repository."
authors = ["Todd Birchard <toddbirchard@gmail.com>"]
maintainers = ["Todd Birchard <toddbirchard@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "django-function-based-views"
repository = "https://github.com/hackersandslackers/django-views-tutorial/"
documentation = "https://hackersandslackers.com/creating-django-views/"
keywords = [
    "Django",
    "Django Views",
    "MVC",
    "Frameworks",
    "Tutorial"
]

[tool.poetry.dependencies]
python = "^3.8"
django = "*"
python-dotenv = "*"
mysqlclient = "*"
django-environ = "*"
ddtrace = "^0.44.0"

[tool.poetry.dev-dependencies]
pytest = "*"
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
run = "django_views_tutorial.wsgi:application"

[tool.poetry.urls]
issues = "https://github.com/hackersandslackers/django-views-tutorial/issues"