[tool.poetry]
name = "django_views_tutorial"
version = "0.1.0"
description = "Function and class-based Django view repository."
authors = ["Todd Birchard <todd@hackersandslackers.com>"]
maintainers = ["Todd Birchard <todd@hackersandslackers.com>"]
license = "MIT"
readme = "README.md"
homepage = "django-function-based-views"
repository = "https://github.com/hackersandslackers/django-views-tutorial/"
documentation = "https://hackersandslackers.com/creating-django-views/"
keywords = [
    "Django",
    "Django Views",
    "MVC",
    "Frameworks",
    "Tutorial"
]

[tool.poetry.dependencies]
python = "^3.9"
django = "*"
python-dotenv = "*"
mysqlclient = "*"
django-environ = "*"
ddtrace = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
black = "*"

[build-system]
requires = ["poetry>=1.3.1"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
run = "django_views_tutorial.wsgi:application"

[tool.poetry.urls]
issues = "https://github.com/hackersandslackers/django-views-tutorial/issues"