[tool.poetry]
name = "django_views_tutorial"
version = "0.1.1"
description = "Function and class-based Django view repository."
authors = ["Todd Birchard <todd@hackersandslackers.com>"]
maintainers = ["Todd Birchard <todd@hackersandslackers.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/hackersandslackers/django-views-tutorial/"
documentation = "https://hackersandslackers.com/creating-django-views/"
keywords = ["Django", "Django Views", "MVC", "Frameworks", "Tutorial"]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
django = "*"
python-dotenv = "*"
mysqlclient = "*"
django-environ = "*"

[tool.poetry.dev-dependencies]
black = "*"
isort = "*"
flake8 = "*"
pylint = "*"
pytest = "*"
coverage = "*"
mypy = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.'MESSAGES CONTROL']
disable = "C0103,C0301,W0703,W0621"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.pylint.format]
max-line-length = "120"

[tool.poetry.scripts]
run = "django_views_tutorial.wsgi:application"

[tool.poetry.urls]
issues = "https://github.com/hackersandslackers/django-views-tutorial/issues"
